--- a/manifest.json
+++ b/manifest.json
@@ -3,11 +3,15 @@
     "name": "Youtube Lyrics Finder",
     "version": "1.0",
     "description": "Find lyrics of the song you are listening blazingly fast",
-    "permissions": ["activeTab"],
+    "permissions": ["activeTab", "storage"],
     "content_scripts": [
         {
             "matches": ["https://www.youtube.com/*"],
             "js": ["content.js"]
         }
-    ]
+    ],
+     "background": {
+        "service_worker": "service-worker.js"
+      }
+      
 }
